# hole

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  steps.md
.dev/: plan.md
.github/workflows/: tests.yml
comprehensive_analysis_results/: analysis_summary.txt
docs/: README.md  api_reference.md  changelog.md  core_concepts.md  developer_guide.md  examples.md  getting_started.md  index.md
docs/tutorials/: README.md
examples/: README.md  analysis.md  bert_ner_classification.py  bert_sentiment_classification.py  blob_contour_demo.py  cluster_analysis_example.py  comprehensive_example.py  comprehensive_metric_structure_analysis.py  contour_plot.py  distance_metrics.py  distance_metrics_example.py  hole_example.py  simple_example.py  three_blobs_example.py  vit_inference_balanced.py  vit_inference_noisy.py  vit_inference_quantized.py  vit_inference_random.py
examples/core/: hole_example.py
examples/modeling/: README.md  infer.py  run_pipeline.sh  train.py
examples/modeling/configs/: config.yaml
examples/modeling/finetune/: README.md  convnext_b.py  convnext_l.py  mbv3l.py  mbv3s.py  mixer_b16.py  mixer_l16.py  rn18.py  rn34.py  rn50.py  train_convnext_base.py  train_convnext_large.py  train_efficientnet.py  train_mobilenet_large.py  train_mobilenet_small.py  train_resnet18.py  train_resnet34.py  train_resnet50.py  train_vit_base.py  train_vit_base_simple.py  train_vit_large.py  vitb32.py  vitl32.py
examples/modeling/inference/: convnext_b_infer.py  convnext_l_infer.py  mbv3l_infer.py  mbv3s_infer.py  mixer_b16_infer.py  mixer_l16_infer.py  resnet50_inference_unified.py  rn18_infer.py  rn34_infer.py  rn50_infer.py  vitb32_infer.py  (+2 more)
examples/nlp/: bert_ner_classification.py
hole/: __init__.py  config.py  visualizer.py
hole/core/: __init__.py  distance_metrics.py  mst_processor.py  persistence.py
hole/utils/: __init__.py  hooks.py  metrics.py
hole/visualization/: __init__.py  cluster_flow.py  heatmap_dendrograms.py  pers_vis.py  persistence_vis.py  scatter_hull.py
tests/: test_analysis_drivers.py  test_basic.py  test_core.py  test_distance_metrics.py  test_integration.py  test_visualizer.py
(+31 files in other folders)
