[tool.poetry]
name = "hole"
version = "0.1.0"
description = "HOLE: Homological Observation of Latent Embeddings - A library for topological analysis and visualization of deep learning representations"
authors = ["Sudhanva Manjunath Athreya <sud.athreya@utah.edu>", "Paul Rosen <paul.rosen@utah.edu>"]
readme = "README.md"
packages = [{include = "hole"}]
repository = "https://github.com/FoxHound0x00/hole"
keywords = ["topology", "ixai", "visualization", "deep-learning", "persistent-homology"]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
scipy = "^1.7.0"
matplotlib = "^3.5.0,<3.9.0"
seaborn = "^0.12.0"
scikit-learn = "^1.0.0"
gudhi = "^3.5.0"
networkx = "^2.6.0"
torch = {version = "^2.0.0", optional = true}
transformers = {version = "^4.20.0", optional = true}
datasets = {version = "^2.0.0", optional = true}
tqdm = "^4.60.0"
pillow = "^9.0.0"
loguru = "^0.7.0"

[tool.poetry.extras]
hooks = ["torch", "transformers", "datasets"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.10.0"
flake8 = "^5.0.0"
mypy = "^1.0.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 